
        1.0.0 release

2011-01-29  Mike McCormack

        * Convert fd list to inlist to save allocs

2011-01-29  Rui Miguel Silva Seabra

        * make https not fail (that's curl's responsibility, really).

2011-01-31  Carsten Haitzler (The Rasterman)

        * Fix: ecore-evas CAN send "render done" messages even if not
        waiting for sync counter when using gl engine. new semi-sync
        mode to account for that.

2011-02-01 Mike McCormack

        * Remove SIGRT from ecore's signals since it's unused and broken

2011-02-09  Mathieu Taillefumier

	* Add xrandr backlight support to ecore_x

2011-02-10 Mike Blumenkrantz

        * Added some more possibly useless safety checks to ecore_con_ares

        * Implement event-driven error message api for all non-curl ecore_con
        +ECORE_CON_EVENT_CLIENT_ERROR, ECORE_CON_EVENT_SERVER_ERROR events
        +Ecore_Con_Event_Server_Error, Ecore_Con_Event_Client_Error types

        * Unify event handler code
        * Always increment server event count for client events

2011-02-11 Mike Blumenkrantz

        * Added ecore_con_client_port_get

2011-02-16 Sangho Park

	* Added ecore_file_download_full API.

2011-02-20 Vincent Torri

	* Ecore_Win32: improve resize of windows and fix key up event for
	the 'space' key.
	* Ecore_WinCE: do not erase a window background

2011-02-21 Jihoon Kim

	* Add get calls in ecore_imf for ecore_imf_context_canvas_get() and
        ecore_imf_context_window_get().

2011-02-21 Raoul Hecky

	* Remove 300 second timeout so large downloads work in ecore_con.

2011-02-22  Carsten Haitzler (The Rasterman)

        * Fix: ecore-file inotify fd would be duplicated in children
        on fork. Have it detecti this on next monitor add and re-init the
        inotify fd and fd handler.

2011-02-24 Vincent Torri

	* Ecore_File: fix compilation when ecore_con and curl are not
	available

2011-02-27 Jihoon Kim

        * Add ecore_imf_context_preedit_string_with_attributes_get API.